apps/blog/service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: blog
  name: blog
spec:
  type: ClusterIP
  selector:
    app: blog
  ports:
  - name: http
    protocol: TCP
    port: 80
    targetPort: 80
